added lines to resume to make more trackable by automated systems

--- a/src/components/pages/resume.tex
+++ b/src/components/pages/resume.tex
@@ -5,6 +5,8 @@
 \usepackage[T1]{fontenc}
 \usepackage{xcolor}
 \pagenumbering{gobble}
+\input{glyphtounicode}
+\pdfgentounicode=1 
 
 \renewcommand{\familydefault}{\sfdefault}
 
