typo fix resume

--- a/src/components/pages/resume.tex
+++ b/src/components/pages/resume.tex
@@ -58,7 +58,7 @@
 
 \sectionHeader{experience}
 \begin{flushleft}
-    \sectionItem{Tesla}{May 2024 - Aug 2024}{Body Controls Firmware}{Palo Alto, CA}{
+    \sectionItem{Tesla}{May 2024 - Aug 2024}{Body Controls Firmware Intern}{Palo Alto, CA}{
         \begin{itemize}
             \item[\textbullet] Developed, tested, and debugged firmware for vehicle control modules on Models X, Y, S, 3, and Cybertruck
             \item[\textbullet] Assisted with bring-up of platform wide tooling such as PC-Lint and EEPROM lifetime logging
