update resume coursework

--- a/src/components/pages/resume.tex
+++ b/src/components/pages/resume.tex
@@ -53,7 +53,7 @@
     \textbf{B.S. in Electrical and Computer Engineering} \hfill \textbf{May 2025} \\
     \textbf{M.S. in Electrical and Computer Engineering (Comp. Arch/Embedded Systems)} \hfill \textbf{May 2026} \\
     \textit{3.78 GPA} \\
-    \underline{Relevant Coursework:} Embedded Systems Lab, Compilers, Algorithms, Operating Systems, Data Science Lab, Digital Logic Design, Computer Architecture, Senior Design
+    \underline{Relevant Coursework:} ML/HW Codesign, Computer Architecture, Embedded Systems Lab, Compilers, Algorithms, Operating Systems, Data Science Lab, Digital Logic Design
 \end{flushleft}
 
 \sectionHeader{experience}
