change one line on resume

--- a/src/components/pages/resume.tex
+++ b/src/components/pages/resume.tex
@@ -65,7 +65,7 @@
         \end{itemize}   
     }
     
-    \sectionItem{Garmin}{May 2023 - Aug 2023}{Flight Control Systems Firmware Engineer}{Olathe, KS}{
+    \sectionItem{Garmin}{May 2023 - Aug 2023}{Flight Control Systems Firmware Intern}{Olathe, KS}{
         \begin{itemize}
             \item[\textbullet] Wrote system-level tests in Python for an integrated flight deck involving vertical navigation of aircraft
             \item[\textbullet] Collaborated with the Aviation Flight Control Systems team on feature development
