--- a/src/components/pages/resume.tex
+++ b/src/components/pages/resume.tex
@@ -51,7 +51,7 @@
     \vspace{2.5pt}
     \textbf{\large UT Austin} \\
     \textbf{B.S. in Electrical and Computer Engineering} \hfill \textbf{May 2025} \\
-    \textbf{M.S. in Electrical and Computer Engineering (Comp. Arch/Embedded Systems)} \hfill \textbf{May 2026} \\
+    \textbf{M.S. in Electrical and Computer Engineering (Spec. Embedded Systems/Comp. Arch.)} \hfill \textbf{May 2026} \\
     \textit{3.78 Undergraduate GPA} \\
     \underline{Relevant Coursework:} ML/HW Codesign, Computer Architecture, Embedded Systems Lab, Compilers, Algorithms, Operating Systems, Data Science Lab, Digital Logic Design
 \end{flushleft}
