--- a/src/components/pages/resume.tex
+++ b/src/components/pages/resume.tex
@@ -29,7 +29,7 @@
 
 \newcommand{\sectionHeader}[1]{%
     \vspace{-1.5\baselineskip}
-    \section*{\MakeUppercase{\large #1}} % Make the header text smaller
+    \section*{\large \MakeUppercase{#1}}
     \vspace{-1.75\baselineskip}
     \color{teal}
     \rule{\textwidth}{2pt} % Add a horizontal line
@@ -67,7 +67,7 @@
 
 \vspace{-1pt}
 
-\sectionHeader{education}       
+\sectionHeader{Education}       
 \begin{flushleft}
     \textbf{\large UT Austin} \\
     \textbf{B.S. in Electrical and Computer Engineering} \hfill \textbf{May 2025} \\
@@ -78,7 +78,7 @@
 
 \vspace{-1pt}
 
-\sectionHeader{experience}
+\sectionHeader{Experience}
 \begin{flushleft}
     \sectionItem{Tesla}{May 2024 - Aug 2024}{Body Controls Firmware Intern}{Palo Alto, CA}{
         \begin{itemize}
@@ -117,7 +117,7 @@
 
 \vspace{-1pt}
 
-\sectionHeader{activities and projects}
+\sectionHeader{Activities and Projects}
 \begin{flushleft}
     \sectionItem{Longhorn Racing Solar Car}{Sept 2021 - Present}{Platform Team Lead}{}{
         \begin{itemize}
