--- a/src/components/pages/resume.tex
+++ b/src/components/pages/resume.tex
@@ -73,7 +73,7 @@
     \textbf{B.S. in Electrical and Computer Engineering} \hfill \textbf{May 2025} \\
     \textbf{M.S. in Electrical and Computer Engineering (Spec. Embedded Systems)} \hfill \textbf{May 2026} \\
     \textit{3.79 Undergraduate GPA} \\
-    \textbf{Relevant Coursework:} ML/HW Codesign, Computer Architecture, Embedded Systems Lab, Compilers, Algorithms, Operating Systems, Data Science Lab, Digital Logic Design
+    \textbf{Relevant Coursework:} Embedded Systems Lab, Compilers,Operating Systems, Digital Logic Design, ML/HW Codesign, Computer Architecture, Algorithms, Data Science Lab, Software Design \& Implementation I/II, Senior Design
 \end{flushleft}
 
 \vspace{-5pt}
@@ -82,37 +82,35 @@
 \begin{flushleft}
     \sectionItem{Tesla}{May 2024 - Aug 2024}{Body Controls Firmware Intern}{Palo Alto, CA}{
         \begin{itemize}
-            \item Developed, tested, and debugged firmware for vehicle control modules on all active vehicles using C and FreeRTOS
-            \item Implemented platform-wide tooling including PC-Lint and EEPROM lifetime logging
-            \item Worked with Renesas and Freescale microcontrollers
-            \item Utilized CAN/LIN and SPI protocols to interface with heaters, trailer brake sensors, overhead lights, and more
-        \end{itemize}   
+            \item Enhanced future firmware reliability by implementing platform-wide tooling PC-Lint for static code analysis
+            \item Assessed non-volatile memory usage across all body control modules by introducing CAN logging for EEPROM usage
+            \item Improved vehicle performance by fixing various bugs and implementing features related to sensor calibration and interfacing (mirror heaters, trailer brake sensors, overhead lights, door actuation)     
+        \end{itemize}
     }
     
     \sectionItem{Garmin}{May 2023 - Aug 2023}{Flight Control Systems Firmware Intern}{Olathe, KS}{
         \begin{itemize}
-            \item Wrote system-level SIL tests in Python for an integrated flight deck involving vertical navigation of aircraft
-            \item Developed on-board HIL unit tests for flight control modules using C in an RTOS environment
-            \item Used SVN for version control and JIRA for task tracking
+            \item Accelerated aircraft control module testing by writing a Python SIL simulation for vertical navigation and altitude tracking
+            \item Optimized flight control module performance by developing HIL unit tests in C within an RTOS environment
         \end{itemize}
     }
 
     \sectionItem{University of Texas at Austin}{Jan 2023 - Present}{Operating Systems TA}{Austin, TX}{
         \begin{itemize}
-            \item Assist a class of 70 students in understanding course material
-            \item Debug projects (User Programs, Virtual Memory, Filesystems) in Stanford's PintOS
+            \item Enhance understanding of OS concepts for 70+ students through effective instruction
+            \item Improve project outcomes by debugging issues in User Programs, Virtual Memory, and Filesystems with PintOS       
         \end{itemize}
         \role{Embedded Systems Tutor}{}{
             \begin{itemize}
-                \item Instructed 10 - 20 students in basic embedded systems concepts (interrupts, DAC/ADC, finite state machines, serial communication, etc.)
+                \item Elevated students' understanding of embedded systems by teaching key concepts such as interrupts, DAC/ADC, finite state machines, and serial communication, resulting in improved project performance and comprehension
             \end{itemize}
         }
     }
 
     \sectionItem{EnergyX}{May 2022 - Aug 2022}{Automation and Controls Intern}{Austin, TX}{
         \begin{itemize}
-            \item Utilized Programmable Logic Controllers to streamline the lithium extraction process
-            \item Wired and tested a control panel to meet prototype specifications
+            \item Optimized the lithium extraction process by programming and integrating Programmable Logic Controllers (PLCs) onto a control panel, enhancing operational efficiency
+            \item Increased system reliability by designing, wiring, and rigorously testing a control panel to meet prototype specifications
         \end{itemize}
     }
 \end{flushleft}
@@ -122,11 +120,9 @@
 \sectionHeader{Activities and Projects}
 \begin{flushleft}
     \sectionItem{Longhorn Racing Solar Car}{Sept 2021 - Present}{Platform Team Lead}{}{
-        \begin{itemize}
-            \item Design hardware and software developer tooling for bench testing
-            \item Streamline Makefile-based build system for the team's shared codebase 
-            \item Develop a UART/CAN bootloader for convenient production firmware updates, including a custom linker script
-            \item Designing a power supply PCB featuring USB-C Power Delivery input and 12V output for bench testing
+        \begin{itemize} 
+            \item Improved robustness of on-vehicle firmware updates by developing a UART/CAN bootloader (custom linker script and flash memory driver)
+            \item Increased remote testing accessibility by designing a 100W power supply PCB featuring USB-C Power Delivery input and 12V output
         \end{itemize}
         \role{Controls Team Lead}{}{
             \begin{itemize}
@@ -156,7 +152,7 @@
 
 \begin{flushleft}
     \rule{\textwidth}{1pt}
-    \underline{Skills:} C/C++, KiCAD, Python, Kernel Development, Application Development for RTOS, Linux, Git, Java \\
+    \underline{Skills:} C/C++, KiCAD, Python, Verilog, Vitis HLS, Kernel Development, Application Development for RTOS, Linux, Git, Java \\
     \underline{Interests:} Table Tennis, Music Production, Piano
 \end{flushleft}
 
