--- a/src/components/pages/resume.tex
+++ b/src/components/pages/resume.tex
@@ -98,7 +98,7 @@
     \sectionItem{University of Texas at Austin}{Jan 2023 - Present}{Operating Systems TA}{Austin, TX}{
         \begin{itemize}
             \item Enhance understanding of OS concepts for 70+ students through effective instruction
-            \item Improve project outcomes by debugging issues in User Programs, Virtual Memory, and Filesystems with PintOS       
+            \item Improve project outcomes by debugging issues in User Programs, Virtual Memory, and Filesystems with PintOS
         \end{itemize}
         \role{Embedded Systems Tutor}{}{
             \begin{itemize}
@@ -134,7 +134,7 @@
     }
     \sectionItem{UT Systems and Machine Learning Research}{Oct 2024 - Present}{Undergraduate Research Assistant}{}{
         \begin{itemize}
-            \item Developing a machine learning model to predict the energy consumption of a serverless computing platform
+            \item Researching energy attribution for serverless functions in the cloud
         \end{itemize}
     }
     \sectionItem{UT Embedded Systems Lab Design Competition - 3rd Place}{Apr 2024}{Embedded Software Engineer}{}{
@@ -152,7 +152,7 @@
 
 \begin{flushleft}
     \rule{\textwidth}{1pt}
-    \underline{Skills:} C/C++, KiCAD, Python, Verilog, Vitis HLS, Kernel Development, Application Development for RTOS, Linux, Git, Java \\
+    \underline{Skills:} C/C++, KiCAD, Python, Verilog, Vitis HLS, Kernel Development, Application Development for RTOS, Linux, Git, Docker, Java \\
     \underline{Interests:} Table Tennis, Music Production, Piano
 \end{flushleft}
 
