--- a/src/components/pages/resume.tex
+++ b/src/components/pages/resume.tex
@@ -73,7 +73,7 @@
     \textbf{B.S. in Electrical and Computer Engineering} \hfill \textbf{May 2025} \\
     \textbf{M.S. in Electrical and Computer Engineering (Spec. Embedded Systems)} \hfill \textbf{May 2026} \\
     \textit{3.79 Undergraduate GPA} \\
-    \textbf{Relevant Coursework:} Embedded Systems Lab, Compilers,Operating Systems, Digital Logic Design, ML/HW Codesign, Computer Architecture, Algorithms, Data Science Lab, Software Design \& Implementation I/II, Senior Design
+    \textbf{Relevant Coursework:} Embedded Systems Lab, Compilers,Operating Systems, Digital Logic Design, ML/HW Codesign, Computer Architecture, Algorithms, Data Science Lab, Software Design \& Implementation I/II, Senior Design Project
 \end{flushleft}
 
 \vspace{-5pt}
@@ -122,7 +122,7 @@
     \sectionItem{Longhorn Racing Solar Car}{Sept 2021 - Present}{Platform Team Lead}{}{
         \begin{itemize} 
             \item Improved robustness of on-vehicle firmware updates by developing a UART/CAN bootloader (custom linker script and flash memory driver)
-            \item Increased remote testing accessibility by designing a 100W power supply PCB featuring USB-C Power Delivery input and 12V output
+            \item Increased remote testing accessibility by designing a 12V/100W power supply PCB featuring USB-C Power Delivery
         \end{itemize}
         \role{Controls Team Lead}{}{
             \begin{itemize}
