update resume & cover letter

--- a/src/components/pages/resume.tex
+++ b/src/components/pages/resume.tex
@@ -152,7 +152,7 @@
 
 \begin{flushleft}
     \rule{\textwidth}{1pt}
-    \underline{Skills:} C/C++, KiCAD, Python, Verilog, Vitis HLS, Kernel Development, Application Development for RTOS, Linux, Git, Docker, Java \\
+    \underline{Skills:} C/C++, KiCAD, Python, Verilog, Vitis HLS, Kernel Development, Application Development for RTOS, Linux, Git, Docker, AWS, Java \\
     \underline{Interests:} Table Tennis, Music Production, Piano
 \end{flushleft}
 
