--- a/src/components/pages/resume.tex
+++ b/src/components/pages/resume.tex
@@ -82,7 +82,7 @@
 \begin{flushleft}
     \sectionItem{Tesla}{May 2024 - Aug 2024}{Body Controls Firmware Intern}{Palo Alto, CA}{
         \begin{itemize}
-            \item Enhanced future firmware reliability by implementing platform-wide tooling PC-Lint for static code analysis
+            \item Enhanced future firmware reliability by implementing tooling PC-Lint for static code analysis on Renesas microcontroller
             \item Assessed non-volatile memory usage across all body control modules by introducing CAN logging for EEPROM usage
             \item Improved vehicle performance by fixing various bugs and implementing features related to sensor calibration and interfacing (mirror heaters, trailer brake sensors, overhead lights, door actuation)     
         \end{itemize}
