adding some stuff i forgot to publish

--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -5,29 +5,29 @@
 
 \begin{document}
 
-\begin{letter}{Hiring Team at Aurora}
+\begin{letter}{Hiring Team at Waymo}
 
-\opening{Dear Hiring Team at Aurora,}
+\opening{Dear Hiring Team at Waymo,}
+I am excited to apply for a position at Waymo, a leader in self-driving technology. As a senior in UT Austin's Integrated Masters program in Electrical and Computer Engineering, specializing in embedded systems (graduating in 2026), I am eager to contribute to Waymo's mission of transforming transportation through autonomous solutions.
 
-I'm thrilled to apply for a position at Aurora, a company at the forefront of advancing self-driving technology. As a senior in UT Austin's Integrated Masters program in Electrical and Computer Engineering, specializing in embedded systems (graduating in 2026), I am eager to contribute to Aurora's mission of transforming transportation through cutting-edge autonomous solutions.
-
-My expertise spans hardware and software, with a focus on designing robust, real-time systems and leveraging machine learning for impactful applications. During my internship at Tesla as a Firmware Developer, I contributed to firmware development for vehicle systems, refining my ability to design and optimize embedded solutions for safety-critical environments. My time at Tesla deepened my understanding of autonomous vehicle systems and underscored the importance of innovation and reliability—values that align with Aurora's pursuit of delivering the Aurora Driver.
+My expertise spans hardware and software, focusing on designing robust, real-time systems and leveraging machine learning. During my internship at Tesla as a Firmware Developer, I contributed to firmware development for vehicle systems, refining my ability to design and optimize embedded solutions for safety-critical environments. My time at Tesla deepened my understanding of autonomous vehicle systems and underscored the importance of innovation and reliability—values that align with Waymo's mission.
 
 Key highlights of my experience include:
 
 \begin{itemize}
-    \item \textbf{Programming Proficiency:} Advanced knowledge of Python and C++, essential for developing embedded systems and optimizing machine learning models in autonomous systems.
-    \item \textbf{Neural Network Architectures:} Strong foundation in CNNs and transformers, applied through coursework in ML/HW codesign, including the use of Vitis HLS for accelerating neural networks on FPGAs.
-    \item \textbf{Custom Bootloader Development:} Designed a UART/CAN bootloader for STM32 microcontrollers in the UT Solar Car project, ensuring seamless firmware updates and reliable communication—a critical feature for distributed embedded systems in vehicles.
+    \item \textbf{Custom Bootloader Development:} Designed a UART/CAN bootloader for STM32 microcontrollers in the UT Solar Car project, ensuring seamless firmware updates and reliable communication.
     \item \textbf{USB PD Power Supply Design:} Engineered a 100W power supply with isolated outputs suitable for CAN environments, demonstrating proficiency in designing robust hardware solutions for automotive applications.
+    \item \textbf{Custom BSP Implementation:} Managed a team to develop a custom interrupt-based BSP built on STM32's HAL library integrated with FreeRTOS for the UT Solar Car project.
     \item \textbf{GameBoy Emulator Project:} Developed a functional emulator on three TM4C microcontrollers as part of my Embedded Systems Final Project, showcasing my creativity in integrating hardware and software.
 \end{itemize}
 
-Beyond technical development, my roles as a Teaching Assistant for Operating Systems and Undergraduate Research Assistant in the Systems and ML Research Group have honed my debugging, kernel-level development, and analytical problem-solving skills. These experiences complement my hands-on engineering expertise, preparing me to tackle the challenges Aurora faces in delivering safe and scalable autonomous systems.
+Beyond technical development, my roles as a Teaching Assistant for Operating Systems and Undergraduate Research Assistant in the Systems and ML Research Group have honed my debugging, kernel-level development, and analytical problem-solving skills. These experiences complement my hands-on engineering expertise, preparing me to tackle the challenges Waymo faces in delivering safe and scalable autonomous systems.
 
-Aurora's commitment to pushing the boundaries of self-driving technology resonates deeply with my passion for innovation and my desire to make meaningful contributions to the future of mobility. I would be excited to bring my skills in embedded systems, hardware-software integration, and machine learning to your team.
+The opportunity to work with a creative team responsible for the bring-up of new hardware platforms and building a multi-platform software stack is incredibly exciting. I am particularly drawn to the role of developing a Hardware Abstraction Layer (HAL) as this is an area where my experience in embedded systems and firmware development can make a significant impact, and something I have three years of experience in through the solar car project and previous internships.
 
-Thank you for considering my application. I look forward to the opportunity to contribute to Aurora's vision and would welcome the chance to discuss how my experiences align with your goals.
+I am particularly excited about the opportunity to work on a bleeding-edge project at the intersection of traditional robotics and modern ML techniques. Waymo's innovative approach to self-driving technology and commitment to pushing the boundaries of autonomous systems resonate deeply with my passion for advancing the field of robotics and perception.
+
+Thank you for considering my application. I look forward to the opportunity to contribute to Waymo's vision and would welcome the chance to discuss how my experiences align with your goals.
 
 Best regards,
 
