--- a/src/components/pages/resume.tex
+++ b/src/components/pages/resume.tex
@@ -73,7 +73,7 @@
     \textbf{B.S. in Electrical and Computer Engineering} \hfill \textbf{May 2025} \\
     \textbf{M.S. in Electrical and Computer Engineering (Spec. Embedded Systems)} \hfill \textbf{May 2026} \\
     \textit{3.79 Undergraduate GPA} \\
-    \textbf{Relevant Coursework:} Embedded Systems Lab, Compilers,Operating Systems, Digital Logic Design, ML/HW Codesign, Computer Architecture, Algorithms, Data Science Lab, Software Design \& Implementation I/II, Senior Design Project
+    \textbf{Relevant Coursework:} Embedded Systems Lab, Compilers, Operating Systems, Digital Logic Design, ML/HW Codesign, Computer Architecture, Algorithms, Data Science Lab, Software Design \& Implementation I/II, RTOS
 \end{flushleft}
 
 \vspace{-5pt}
