--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -126,9 +126,8 @@
         \end{itemize}
         \role{Controls Team Lead}{}{
             \begin{itemize}
-                \item Programmed in an RTOS context for our shared platform of ARM-based STM32 microcontrollers
-                \item Interfaced with display, pedals, lights, and motor controller
-                \item Managed a team of 12 through a traditional software workflow with Git/GitHub
+	      \item Programmed in an RTOS context for our platform of STM32 microcontrollers (display, motor controller)
+	      \item Managed a team of 12 through a traditional software workflow with Git/GitHub
             \end{itemize}
         }
     }
@@ -143,9 +142,10 @@
             \item Designed a circuit board in KiCAD and worked with protocols such as SPI/QSPI and 16-bit parallel
         \end{itemize}
     }
-    \sectionItem{Data Science Lab Project}{Nov 2023 - Dec 2023}{ML Engineer}{}{
+    \sectionItem{UT Real-Time Operating Systems Graduate Project}{Apr 2025}{Embedded Software Engineer}{}{
         \begin{itemize}    
-            \item Stacked ML models to restore portraits on UT TACC’S Frontera supercomputer for the UT History Department
+            \item Interfaced with a Wifi-Ethernet bridge chip and wrote MAC, IP, UDP, ICMP, ARP, and DHCP drivers from scratch
+	    \item Demonstrated functional ping and netcat implementations on an RTOS
         \end{itemize}
     }
 \end{flushleft}
