--- a/ublog/2025-05-10-09:16:58AM.md
+++ b/ublog/2025-05-10-09:16:58AM.md
@@ -1,3 +1,3 @@
 
 finally got basic term output working through bare bones os dev tutorial
-![image](/mnt/Work/ishdeshpa.github.io/ublog/2025-05-10-09:16:58AM.png)
+![image](2025-05-10-09:16:58AM.png)
