--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -80,6 +80,13 @@
 
 \sectionHeader{Experience}
 \begin{flushleft}
+    \sectionItem{Meta Reality Labs}{May 2025 - Aug 2025}{Embedded SWE Intern}{Pittsburgh, PA}{
+        \begin{itemize}
+	    \item Built a Python assembler, emulator, and verifier for a custom state machine and instruction set, boosting development speed and reliability.
+	    \item Integrated ultrasonic, radar, and IMU sensors into a real-time headset pipeline, enabling advanced multimodal sensing.
+        \end{itemize}
+    }
+    
     \sectionItem{Tesla}{May 2024 - Aug 2024}{Body Controls Firmware Intern}{Palo Alto, CA}{
         \begin{itemize}
             \item Enhanced future firmware reliability by implementing tooling PC-Lint for static code analysis on Renesas microcontroller
@@ -107,12 +114,6 @@
         }
     }
 
-    \sectionItem{EnergyX}{May 2022 - Aug 2022}{Automation and Controls Intern}{Austin, TX}{
-        \begin{itemize}
-            \item Optimized the lithium extraction process by programming and integrating Programmable Logic Controllers (PLCs) onto a control panel, enhancing operational efficiency
-            \item Increased system reliability by designing, wiring, and rigorously testing a control panel to meet prototype specifications
-        \end{itemize}
-    }
 \end{flushleft}
 
 \vspace{-7.5pt}
@@ -131,11 +132,6 @@
             \end{itemize}
         }
     }
-    \sectionItem{UT Systems and Machine Learning Research}{Oct 2024 - Present}{Undergraduate Research Assistant}{}{
-        \begin{itemize}
-            \item Researching energy attribution for serverless functions in the cloud
-        \end{itemize}
-    }
     \sectionItem{UT Embedded Systems Lab Design Competition - 3rd Place}{Apr 2024}{Embedded Software Engineer}{}{
         \begin{itemize}
             \item Collaborated with a team of 4 to develop a GameBoy emulator on a TM4C microcontroller
@@ -152,7 +148,7 @@
 
 \begin{flushleft}
     \rule{\textwidth}{1pt}
-    \underline{Skills:} C/C++, KiCAD, Python, Verilog, Vitis HLS, Kernel Development, Application Development for RTOS, Linux, Git, Docker, AWS, Java \\
+    \underline{Skills:} C, KiCAD, Python, Verilog, Vitis HLS, Kernel Development, Application Development for RTOS, Linux, Git, Docker, AWS, Java \\
     \underline{Interests:} Table Tennis, Music Production, Piano
 \end{flushleft}
 
