--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -70,20 +70,20 @@
 \sectionHeader{Education}       
 \begin{flushleft}
     \textbf{\large UT Austin} \\
+    \textbf{M.S. in Electrical and Computer Engineering (Spec. Embedded Systems)} \hfill \textbf{December 2026} \\
     \textbf{B.S. in Electrical and Computer Engineering} \hfill \textbf{May 2025} \\
     \textit{3.79 Undergraduate GPA} \\
-    \textbf{M.S. in Electrical and Computer Engineering (Spec. Embedded Systems)} \hfill \textbf{December 2026} \\
-    \textbf{Relevant Coursework:} Embedded Systems Lab, Compilers, Operating Systems, Digital Logic Design, ML/HW Codesign, Computer Architecture, Algorithms, Data Science Lab, Software Design \& Implementation I/II, RTOS
+    \textbf{Relevant Coursework:} Embedded Systems Lab, Compilers, Operating Systems, Digital Logic Design, ML/HW Codesign, Computer Architecture, Algorithms, Data Science Lab, Software Design \& Implementation I/II, RTOS, VLSI
 \end{flushleft}
 
 \vspace{-5pt}
 
 \sectionHeader{Experience}
 \begin{flushleft}
-    \sectionItem{Meta Reality Labs}{May 2025 - Aug 2025}{Embedded SWE Intern}{Pittsburgh, PA}{
+    \sectionItem{Meta Reality Labs}{May 2025 - Aug 2025}{Codec Avatars Embedded Intern}{Pittsburgh, PA}{
         \begin{itemize}
-	    \item Built a Python assembler, emulator, and verifier for a custom state machine and instruction set, boosting development speed and reliability.
-	    \item Integrated ultrasonic, radar, and IMU sensors into a real-time headset pipeline, enabling advanced multimodal sensing.
+        \item Accelerated sensor prototyping by building a custom assembler, emulator, and verifier for a programmable I/O state machine on FPGA, reducing development time and enabling flexible sensor integration.
+        \item Improved model fidelity by integrating ultrasonic, radar, and IMU data to capture facial movements.
         \end{itemize}
     }
     
